; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/kern/extr_memfd_test.c_memfd_truncate_test.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/kern/extr_memfd_test.c_memfd_truncate_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"...\00", align 1
@MFD_ALLOW_SEALING = common dso_local global i32 0, align 4
@F_ADD_SEALS = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @memfd_truncate_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memfd_truncate_test(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @MFD_ALLOW_SEALING, align 4
  %10 = call i32 @memfd_create(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %9)
  store i32 %10, i32* %8, align 4
  %11 = icmp ne i32 %10, -1
  %12 = zext i1 %11 to i32
  %13 = call i32 @ATF_REQUIRE(i32 %12)
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @ftruncate(i32 %14, i32 %15)
  %17 = icmp eq i32 %16, 0
  %18 = zext i1 %17 to i32
  %19 = call i32 @ATF_REQUIRE(i32 %18)
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @F_ADD_SEALS, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i64 @fcntl(i32 %20, i32 %21, i32 %22)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @ATF_REQUIRE(i32 %25)
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @ftruncate(i32 %27, i32 %28)
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %3
  %33 = load i32, i32* @errno, align 4
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %32, %3
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @close(i32 %35)
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @ATF_REQUIRE(i32) #1

declare dso_local i32 @memfd_create(i8*, i32) #1

declare dso_local i32 @ftruncate(i32, i32) #1

declare dso_local i64 @fcntl(i32, i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
